// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When addon component has a problem the Icon shows is displayed in orange 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "grafana",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-egressgateway",
                  "status": "Healthy",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_frkkrth"
      data-test="istio-status-warning"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When both core and addon component have problems any component is in not ready the Icon shows is displayed in red 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "grafana",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-egressgateway",
                  "status": "Unhealthy",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1h37jb8"
      data-test="istio-status-danger"
    >
      <ExclamationCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When core component has a problem the Icon shows is displayed in Red 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "grafana",
                  "status": "Healthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-egressgateway",
                  "status": "Unhealthy",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1h37jb8"
      data-test="istio-status-danger"
    >
      <ExclamationCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When there are not-ready components mixed with other not healthy components in addons the Icon is displayed in orange 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "grafana",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "jaeger",
                  "status": "NotReady",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_frkkrth"
      data-test="istio-status-warning"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When there are not-ready components mixed with other not healthy components in both the Icon shows is displayed in red 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "grafana",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "jaeger",
                  "status": "NotReady",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-egressgateway",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-ingressgateway",
                  "status": "NotReady",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1h37jb8"
      data-test="istio-status-danger"
    >
      <ExclamationCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When there are not-ready components mixed with other not healthy components in core the Icon is displayed in red 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-egressgateway",
                  "status": "Unhealthy",
                },
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istio-ingressgateway",
                  "status": "NotReady",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1h37jb8"
      data-test="istio-status-danger"
    >
      <ExclamationCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When there are not-ready components not mixed with other unhealthy components in addons renders the Icon in blue 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": true,
                  "name": "istiod",
                  "status": "NotReady",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1elceoh"
      data-test="istio-status-info"
    >
      <InfoCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;

exports[`When there are not-ready components not mixed with other unhealthy components in core renders the Icon in blue 1`] = `
<Tooltip
  content={
    <React.Fragment>
      <TextContent
        style={
          Object {
            "color": "var(--pf-v6-global--palette--white)",
          }
        }
      >
        <Text
          component="h4"
        >
          Cluster Status
        </Text>
        <React.Fragment>
          <div
            className="kiali_f8qnpeg"
          >
            <PFBadge
              badge={
                Object {
                  "badge": "C",
                  "style": Object {
                    "backgroundColor": "var(--pf-v6-global--palette--blue-300)",
                  },
                  "tt": "Cluster",
                }
              }
              size="sm"
            />
            Kubernetes
            <span
              style={
                Object {
                  "marginLeft": "0.25rem",
                }
              }
            >
              <Star />
            </span>
          </div>
          <IstioStatusList
            cluster="Kubernetes"
            status={
              Array [
                Object {
                  "cluster": "Kubernetes",
                  "is_core": false,
                  "name": "jaeger",
                  "status": "NotReady",
                },
              ]
            }
          />
        </React.Fragment>
        <div
          className="kiali_f1kewvaf"
        >
          <span>
            More info at
          </span>
          <Link
            to="/mesh"
          >
            Mesh page
          </Link>
        </div>
      </TextContent>
    </React.Fragment>
  }
  data-test="component-status-tooltip"
  enableFlip={true}
  maxWidth="25rem"
  position="top"
>
  <Label
    className="kiali_frds3np"
    color="blue"
    data-test="cluster-icon"
    icon={<Cluster />}
  >
    Kubernetes
    <Icon
      className="kiali_f10wsz75 kiali_f1elceoh"
      data-test="istio-status-info"
    >
      <InfoCircleIcon />
    </Icon>
  </Label>
</Tooltip>
`;
